--- a/web/wx/reserveSpace.html
+++ b/web/wx/reserveSpace.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="tag">
                         <%pics.forEach(function(item,index){%>
-                            <span <%if(index==0){%> class="current"><%}%></span>
+                            <span <%if(index==0){%> class="current"<%}%>></span>
                         <%})%>
                     </div>
                 </div>
