--- a/web/H5/ShareCrowdfunding.html
+++ b/web/H5/ShareCrowdfunding.html
@@ -101,8 +101,10 @@
                 <h2>讲师</h2>
                 <ul>
                     <li class="clear" data-guid="<%=data.t_LecturerGuid%>">
-                        <img src="<%=data.lecturerAvator||default_avator%>">
-                        <div>
+                        <div class="left">
+                            <img src="<%=data.lecturerAvator||default_avator%>">
+                        </div>
+                        <div class="right">
                             <h2><%=data.lecturerName%></h2>
                             <p><%==data.lecturerInfo.replace(/===/g,'').slice(0,33)%></p>
                         </div>
